client/app/views/templates/main.css
/* make sidebar nav vertical */ 
@media (min-width: 768px) {
  .sidebar-nav .navbar .navbar-collapse {
    padding: 0;
    max-height: none;
  }
  .sidebar-nav .navbar ul {
    float: none;
  }
  .sidebar-nav .navbar ul:not {
    display: block;
  }
  .sidebar-nav .navbar li {
    float: none;
    display: block;
  }
  .sidebar-nav .navbar li a {
    padding-top: 12px;
    padding-bottom: 12px;
  }
  
  div.navbar{
    border-radius:0px;
    margin-top:20px;
    background-color:rgba(0,0,0,0);
  }
  
  div.navbar ul.nav li a{
    color:#444;
    font-weight:700;
  }
  
  div.navbar ul.nav li a:hover{
    color:#BBB;
    font-weight:700;
    background-color:rgb(44, 62, 80);
  }
}

@media (max-width: 767px) {
  h3.nav-header{
    display: none;
  }
}


/*Global*/
div.container{
  width:100%;
  padding:0;
}

div.leftMenu{
  padding:0;
}

p{
  margin-top:15px;
}

/*****************/
/* Settings View */
/*****************/
.settingsContainer div.submitButton{
  margin-top:30px;
}

.settingsContainer div.submitButton button{
  margin-bottom:20px;
  margin-left:-200px;
}

.settingsContainer input{
  width: 250px;
}

.settingsContainer button#DYBconnection, button#DYBconnected{
  margin : 20px 0px;
}

.settingsContainer #DYBconnection{
  display:block;
}

.settingsContainer #DYBloadingIcon{
  position:absolute;
  margin-top:-35px;
  margin-left:320px;
}

/***************/
/* Profil View */
/***************/
.profilContainer input{
  width: 300px;
}

.profilContainer div.submitButton{
  margin-top:30px;
}

.profilContainer div.submitButton button{
  margin-bottom:20px;
}

.profilContainer #DYBSyncing{
  margin-left:20px;
}

.profilContainer input[type="checkbox"]{
  display:inline-block;
  width:50px;
  margin-left:30px;
  vertical-align: top;
  display:none;
}

.profilContainer input[type="checkbox"] + label{
  position:absolute;
  content:"";
  width:27px;
  height:27px;
  border:3px solid #bbb;
  background-color: #777;
  cursor: pointer;
  box-shadow: 0px 0px 2px #333 inset;
  transition: all 0.3s ease-out;
}

.profilContainer input[type="checkbox"]:checked + label{
  background-color: #27ae60;
  box-shadow: 0px 0px 5px #333 inset;
  transition: all 0.3s ease-out;
}

.profilContainer input[type="checkbox"] + label:hover::after, .profilContainer input[type="checkbox"]:checked + label:hover::after{
  display: block;
  position: absolute;
  padding: .5em;
  min-width: 120px;
  text-align: center;
  width: auto;
  height: auto;
  white-space: nowrap;
  top: -35px;
  left:10px;
  background: rgba(0,0,0,.7);
  -moz-border-radius:5px;
  -webkit-border-radius:5px;
  border-radius:5px;
  color: #fff;
  font-size: .86em;
}

.profilContainer input[type="checkbox"] + label:hover::after{
  content: "Afficher sur mon portfolio";
}

.profilContainer input[type="checkbox"]:checked + label:hover::after{
  content: "Enlever de mon portfolio";
}

.profilContainer #resumesContainer .resume{
  display:block;
  width:200px;
  height:100px;
  float:left;
  border:2px solid #777;
  box-shadow: 0px 0px 0px #555;
  -moz-border-radius:5px;
  -webkit-border-radius:5px;
  border-radius:5px;
  cursor:pointer;
  margin:7px;
  opacity:0.5;
  transition: all 0.5s ease;
}

.profilContainer #resumesContainer .resume.choice{
  border:2px solid #27ae60;
  box-shadow: 0px 0px 5px #555;
  opacity:1;
  transition: all 0.2s ease;
}

.profilContainer #resumesContainer .resume:hover{
  box-shadow: 0px 0px 10px #555;
  opacity:1;
  transition: all 0.2s ease;
}

.profilContainer #resumesContainer .resumeTitle{
  color:#2980b9;
  font-size: 10pt;
  width:180px;
  height:80px;
  margin:auto;
  margin-top:8px;
  text-align: center;
  padding:3px;
  border-bottom: 1px solid #2980b9;
  border-top: 1px solid #2980b9;
  overflow: scroll;
}
.profilContainer #DYBloadingIcon{
  display: inline-block;
  margin-left: 20px;
}



/*************************/
/**    CHOICES VIEW     **/
/*************************/

.choicesContainer .tab{
  border:1px solid #555;
  margin:0 10px;
  position: relative;
  border-radius: 15px 15px 0px 0px;
  padding-bottom: 10px;
  background-color: #eee;
}

.choicesContainer .tabTitle{
  padding:15px;
  border-radius: 15px 15px 0px 0px;
  font-size: 18px;
}

.choicesContainer .docsContainer{
  padding:5px;
}

.choicesContainer .badgeBlock{
  padding:5px;
}

.choicesContainer .badgeBlock .badgeContent{
  box-shadow: 0px 0px 5px #999;
  padding:2px;
  background-color: rgba(255,255,255,0.3);
  border:2px solid rgba(255,255,255,0.3);
  opacity:0.5;
  transition: all 0.2s ease;
  cursor: pointer;
}

.choicesContainer img.badgeImage{
  width:100px;
  height:100px;
  float:left;
  margin:10px;
  padding:8px;
  border-radius: 5px;
  box-shadow: 0px 0px 5px #333 inset;
  border:2px solid #bbb;
}

.choicesContainer .badgeDetails span.badgeName{
  font-weight: 900;
}

.choicesContainer .badgeDetails p.badgeIssuer{
  margin-bottom:0px;
  margin-top: 7px;
  font-size: 17px;
}
.choicesContainer .badgeDetails p.badgeDescription{
  margin-top:0px;
  margin-bottom:0px;
  font-size: 14px;
  margin-left:5px;
  margin-right:5px;
}

.choicesContainer .badgeDetails .badgeLink{
  float:right;
  margin-right:10px;
  padding:10px;
}

.choicesContainer .badgeBlock a{
  color:black;
  text-decoration: underline;
}

.choicesContainer .badgeBlock .badgeContent.choice{
  border:2px solid #27ae60;
  opacity:1;
  transition: all 0.2s ease;
}

.choicesContainer .badgeBlock .badgeContent:hover{
  opacity:1;
  transition: all 0.2s ease;
}
.choicesContainer .badgeBlock .badgeContent:hover::after, .choicesContainer .badgeBlock .badgeContent.choice:hover::after{ 
  display: block;
  position: absolute;
  padding: .5em;
  min-width: 120px;
  text-align: center;
  width: auto;
  height: auto;
  white-space: nowrap;
  top: -35px;
  left:10px;
  background: rgba(0,0,0,.7);
  -moz-border-radius:5px;
  -webkit-border-radius:5px;
  border-radius:5px;
  color: #fff;
  font-size: .86em;
}


.choicesContainer .badgeBlock .badgeContent:hover::after{
  content: "Afficher sur mon portfolio";
}

.choicesContainer .badgeBlock .badgeContent.choice:hover::after{
  content: "Enlever de mon portfolio";
}


/***********************/
/**    COMPONENTS     **/
/***********************/

/*Spinner loading icon*/
.spinner {
  height: 28px;
  width: 28px;
  animation: rotate 0.8s infinite linear;
  border: 5px solid #f39c12;
  border-right-color: transparent;
  border-radius: 50%;
}

@keyframes rotate {
  0%    { transform: rotate(0deg); }
  100%  { transform: rotate(360deg); }
}

